# mn-fibril-modeller-gemmi

./: .gitignore  AGENTS.md  README.md  agent.md  environment.yml  pyproject.toml
.streamlit/: config.toml
mn_fibril_modeller_gemmi/: app.py  cli.py
mn_fibril_modeller_gemmi/core/: __init__.py  pdb_io.py  propagation.py  rosetta.py
mn_fibril_modeller_gemmi/rosetta/: container_pyrosetta_fastrelax.py
mn_fibril_modeller_gemmi/viewer/: __init__.py
mn_fibril_modeller_gemmi/viewer/molstar_custom_component/: __init__.py  dataclasses.py
tests/: test_pdb_io.py  test_propagation.py
